<resources>
    <string name="toast_devicename_invalid">Identifier not valid</string>
    <string name="device_slide_hint">Identifier</string>
    <string name="device_slide_title">Device identifier</string>
    <string name="device_slide_content">
        In order to improve security, you need to enter an identifier for your current device. It is only visible to you and makes it possible
        to show you a list of all active devices. If you notice any suspicious activity, you can always block the access to your account for
        certain smartphones.
    </string>
    <string name="title_survey_result">Saved Results</string>
    <string name="entry_deleted">Entry deleted</string>
    <string name="pref_logout_title">Log out</string>
    <string name="pref_logout_desc">Log out from your current lunch.leo-ac Account</string>
    <string name="logout_confirm">Successfully logged out</string>
    <string-array name="entryName">
        <item>English</item>
        <item>German</item>
    </string-array>
    <string-array name="entryIcon">
        <item>en</item>
        <item>de</item>
    </string-array>
    <string name="icon_default">ic_us_uk_flag</string>
    <string name="icon_label">Icon</string>
    <string name="summary_language">Change language</string>
    <string name="title_language">Language</string>
    <string name="intro_info">
        <![CDATA[
            <h3>General</h3>
            You may encounter small bugs in the first versions, we hope you can overlook those. <br/>
            With (anonymous) features like surveys we trust your reason. However, it is still possible to identify
            the author on misuse.

            <h3>Messenger</h3>
            Due to some difficulties, the Messenger isn\'t available in this version of the LeoApp. We expect
            that you will be able to use it in the near future though.

            <h3>Have fun!</h3>
            If you have any questions, you can ask Mr. Meltzow or contact us via <i>app@leo-ac.de</i>

        ]]>
    </string>
    <string name="no_exams">No exams!</string>
    <string name="user_info">User Information</string>
    <string name="user_info_id">UID:\t %1$d</string>
    <string name="user_info_name">Name:\t %1$s</string>
    <string name="user_info_defaultname">Defaultname:\t %1$s</string>
    <string name="user_info_level">Class:\t %1$s</string>
    <string name="user_info_permission">Permissionlevel:\t %1$s</string>
    <string name="user_info_createdate">Date of verification: %1$s</string>
    <string name="qr_intro_title1">QR - Foodmarks</string>
    <string name="qr_intro_desc1">This feature simplifies the issue of food during lunch.</string>
    <string name="desc_it_problem">Helps you to fix any problem concerning classroom technology</string>
    <string name="qr_intro_titleVerification" translatable="false">Log in</string>
    <string name="qr_intro_descVerification">In order to profit from the QR - Code functionality, it is necessary for you to log in with your
        lunch.leo-ac.de credentials.</string>
    <string name="app_name" translatable="false">LeoApp</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_it_problem">IT Problem Solver</string>
    <string name="nolessons">No lessons today :)</string>
    <string name="dismiss">Dismiss</string>
    <string name="confirm" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error">Sorry, something went wrong</string>
    <string name="error_sync">Sync failed</string>
    <string name="hours_settings_template">%1$s h</string>
    <string name="verification_title">Verify</string>
    <string name="verification_desc">In order to use the LeoApp you need to be verified. You can do so by logging in with your school account</string>
    <string name="intro_finished_title">All set!</string>
    <string name="intro_finished_desc">You are now verified and able to use the app in its entirety! Maybe you can start by visiting your profile</string>
    <string name="introqr_finished_desc">You are now logged in and able to use the QR-Foodmark system in its entirety!</string>
    <string name="share">Share</string>
    <string name="umfragen">Surveys</string>
    <string name="title_name_change">Change name</string>
    <string name="share_text" translatable="false">Stimme in der LeoApp Umfrage \"%1$s\" ab! &#9885; Installiere die LeoApp über den Playstore: http://app.leoapp-slg.de</string>
    <string name="drawer_placeholder_name">Username</string>
    <string name="drawer_placeholder_grade">Grade</string>
    <string name="no_surveys">No surveys available</string>
    <string name="no_entries">No entries</string>
    <string name="info_devs" translatable="false">LeoApp Team</string>
    <string name="none">None</string>
    <string name="notification_test_content">You have a test tomorrow!</string>
    <string name="dialog_changelog">
        + Different visuals for read/unread surveys/pin board entries
        \n+ pin board entries/surveys in chronological order\n+ More performant synchronisation of surveys\n+ Information for teachers on long click on survey
        \n+ Language changeable in the settings
    </string>
    <string name="settings_summary_notification_survey_students">Receive notifications on new surveys</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_load">Load exams</string>
    <string name="action_delete_all">Delete downloaded exams</string>
    <string name="action_leave_chat">Leave chat</string>
    <string name="action_help">Help</string>
    <string name="action_request" translatable="false">Bugreport</string>
    <string name="title">Title</string>
    <string name="snackbar_ungültig">Subject or date are incorrect</string>
    <string name="snackbar_gelöscht">All Exams deleted</string>
    <string name="snackbar_undo">Undo</string>
    <string name="snackbar_no_connection_info">No internet connection</string>
    <string name="settings_snackbar_username_taken">That username is already taken</string>
    <string name="snackbar_no_connection_info_check">No internet connection to check login data</string>
    <string name="snackbar_not_correct_info">Login data not correct</string>
    <string name="SnackBarMes">Could not load plan</string>
    <string name="SnackBarMes2">No Grade selected</string>
    <string name="snackbar_select">Select</string>
    <string name="snackbar_date_invalid">Date is invalid</string>
    <string name="snackbar_missing_title">Please add a subject</string>
    <string name="title_home">Home</string>
    <string name="title_foodmarks">Foodmarks</string>
    <string name="title_testplan">Exams</string>
    <string name="title_messenger" translatable="false">Messenger</string>
    <string name="title_tutoring">Tutoring</string>
    <string name="title_news">Pin Board</string>
    <string name="title_survey">Mood</string>
    <string name="title_plan">Timetable</string>
    <string name="title_subst">Substitutions</string>
    <string name="title_settings">Settings</string>
    <string name="title_settings_notifications">Notifications</string>
    <string name="summary_info_auth">In order to use some of the features, you need to be verified. You can do so by clicking the button below.</string>
    <string name="summary_info_foodmark">This feature is used to confirm your lunch order digitally. Just show the QR-Code to the mensa staff.</string>
    <string name="summary_info_testplan">This is an automatically generated plan for your tests. You can filter them by configuring your settings or add your own assignments</string>
    <string name="summary_info_messenger">The messenger is not yet ready to use. We are working to fix it as soon as possible.</string>
    <string name="summary_info_tutoring">In need of a tutor or a student? Just add a message to the tutoring board!</string>
    <string name="summary_info_news">You can find all relevant news concerning your scholar life on the LeoApp-Newsboard</string>
    <string name="summary_info_survey">You can choose your current mood daily and see some statistics</string>
    <string name="summary_info_subst">See your substitutions for today and tomorrow</string>
    <string name="summary_info_schedule">After choosing your lessons, a schedule will be generated which you can further customize</string>
    <string name="coming_soon" translatable="false">Coming soon!</string>
    <string name="add_card">Add card</string>
    <string name="button_add">Add</string>
    <string name="selector_card">Add card(s)</string>
    <string name="button_info_try">Try it</string>
    <string name="title_info_auth_failed">You are not verified yet</string>
    <string name="title_info_auth">You are verified</string>
    <string name="summary_about">Information about this application</string>
    <string name="cards_customize">Adjust</string>
    <string name="thank_you_feature">Thank you for your feedback</string>
    <string name="set_changes">Save changes</string>
    <string name="feature_request">Explain your suggestion</string>
    <string name="feature_request_title">Feature idea / Bugreport</string>
    <string name="cards_quick">Quick access</string>
    <string name="discard">Discard</string>
    <string name="todo_description">\t- Terminplaner \t- Digitaler Vertretungsplan \t- Nachhilfebörse \t- Eure Vorschläge</string>
    <string name="changelog" translatable="false">Changelog</string>
    <string name="toolbar_name_info">About</string>
    <string name="info_screen_title">LeoApp for Android</string>
    <string name="info_screen_first" translatable="false">VersionPlaceholder</string>
    <string name="info_screen_second">Developed in the informatics project course 2017 by students of the SLG</string>
    <string name="info_screen_third" translatable="false">St. Leonhard Gymnasium</string>
    <string name="info_screen_fourth">No responsibility is taken for the correctness and completeness of any information.</string>
    <string name="info_screen_fifth">Developer</string>
    <string name="toolbar_scan">Scan!</string>
    <string name="button_scan">Scan</string>
    <string name="button_confirm" translatable="false">OK</string>
    <string name="textview_placeholder" translatable="false">placeholder</string>
    <string name="qr_display_title">Your order for today, the</string>
    <string name="qr_display_menu">Menu %1$d</string>
    <string name="dialog_desc_valid">Menu \t %1$d</string>
    <string name="dialog_desc_valid_id" translatable="false">User-ID: </string>
    <string name="qr_display_not_ordered">You have no order for today</string>
    <string name="qr_display_not_loggedin">You\'re not logged in, please check your user data</string>
    <string name="explain_title_1" translatable="false">Info</string>
    <string name="explain_desc_1">This is used to scan the QR-Foodmarks.</string>
    <string name="explain_title_2">Step 1</string>
    <string name="explain_desc_2">Use the scan button below to start the camera and move the green box above the QR-code you intend on scanning and wait for the app to process the result.</string>
    <string name="new_entry_title">Title</string>
    <string name="button_next">Next</string>
    <string name="send_survey">Send</string>
    <string name="survey_checkbox_answers">Multiple options available</string>
    <string name="survey_new_answer">Answer</string>
    <string name="title_survey_answers">Answer possibilities</string>
    <string name="title_survey_title">Title</string>
    <string name="back">Back</string>
    <string name="title_survey_news">Surveys</string>
    <string name="profil">Your Profile</string>
    <string name="createCourse">Create new Course</string>
    <string name="survey_description_answers">Add up to five answer possibilities</string>
</resources>