<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav0"
        android:checkableBehavior="single">
        <item
            android:id="@+id/startseite"
            android:checked="false"
            android:icon="@mipmap/icon_startseite"
            android:title="@string/title_home" />
        <item
            android:id="@+id/foodmarks"
            android:checked="false"
            android:icon="@mipmap/icon_essensbons"
            android:title="@string/title_foodmarks" />
        <item
            android:id="@+id/klausurplan"
            android:checked="false"
            android:icon="@mipmap/icon_klausurplan"
            android:title="@string/title_testplan" />
        <item
            android:id="@+id/messenger"
            android:checked="false"
            android:icon="@mipmap/icon_messenger"
            android:title="@string/title_messenger" />
        <item
            android:id="@+id/newsboard"
            android:checked="false"
            android:icon="@mipmap/icon_schwarzes_brett"
            android:title="@string/title_news" />
        <item
            android:id="@+id/barometer"
            android:checked="false"
            android:icon="@mipmap/icon_stimmungsbarometer"
            android:title="@string/title_survey" />
        <item
            android:id="@+id/stundenplan"
            android:checked="false"
            android:icon="@mipmap/icon_stundenplan"
            android:title="@string/title_plan" />
        <item
            android:id="@+id/umfragen"
            android:checked="false"
            android:icon="@mipmap/icon_umfragen"
            android:title="@string/title_survey_news" />
        <item
            android:id="@+id/itsolver"
            android:checked="false"
            android:icon="@mipmap/icon_it_problem"
            android:title="@string/title_it_problem" />
        <item
            android:id="@+id/bestellung"
            android:checked="false"
            android:icon="@mipmap/leo_app_icon_fliege"
            android:title="Essensbestellung" />
    </group>

    <group
        android:id="@+id/nav1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profil" />
        <item
            android:id="@+id/settings"
            android:icon="@mipmap/icon_settings"
            android:title="@string/title_settings" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info"
            android:title="@string/toolbar_name_info"/>
    </group>
</menu>