<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/createCourse"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:inputType="textCapSentences"
        android:lines="1"
        android:hint="@string/new_entry_title"
        android:textColor="@color/colorText"
        android:layout_below="@+id/title_details"
        android:layout_alignLeft="@+id/title_details"
        android:layout_alignStart="@+id/title_details"
        android:layout_alignRight="@+id/title_details"
        android:layout_alignEnd="@+id/title_details"/>

    <Button
        android:id="@+id/buttonSave"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/content"
        android:layout_marginTop="20dp"
        android:text="@string/send_survey"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/buttonBack"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/content"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_chevron_left"
        android:drawableStart="@drawable/ic_chevron_left"
        android:drawableTint="@color/colorPrimary"
        android:text="@string/back"
        android:textAllCaps="true" />

</RelativeLayout>