<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/title_survey_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/title_details"
        android:layout_alignLeft="@+id/title_details"
        android:layout_alignRight="@+id/title_details"
        android:layout_alignStart="@+id/title_details"
        android:layout_below="@+id/title_details"
        android:layout_marginTop="11dp" />

    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:inputType="textCapSentences"
        android:lines="1"
        android:textColor="@color/colorText" />

    <Button
        android:id="@+id/buttonExamSave"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/content"
        android:layout_marginTop="20dp"
        android:drawableRight="@drawable/ic_chevron_right"
        android:drawableTint="@color/colorPrimary"
        android:text="@string/button_next"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/buttonBack"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/content"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@id/buttonExamSave"
        android:text="@string/cancel"
        android:textAllCaps="true"
        />

</RelativeLayout>