<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/title_survey_answers"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/title_details"
        android:layout_alignLeft="@+id/title_details"
        android:layout_alignRight="@+id/title_details"
        android:layout_alignStart="@+id/title_details"
        android:layout_below="@+id/title_details"
        android:layout_marginTop="11dp"
        android:text="@string/survey_description_answers" />

    <CheckBox
        android:id="@+id/multiple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/survey_checkbox_answers" />

    <Button
        android:id="@+id/new_answer"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_below="@+id/multiple"
        android:layout_marginTop="13dp"
        android:drawableLeft="@drawable/ic_add"
        android:drawableTint="@color/colorPrimary"
        android:text="@string/survey_new_answer"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/new_answer"
        android:layout_below="@+id/multiple"
        android:layout_marginRight="20dp"
        android:layout_marginTop="13dp"
        android:inputType="text"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/button"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_answer"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:drawableLeft="@drawable/ic_add"
        android:drawableTint="@color/colorPrimary"
        android:text="@string/survey_new_answer"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/new_answer"
        android:layout_below="@+id/new_answer"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:inputType="text"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/button1"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:drawableLeft="@drawable/ic_add"
        android:drawableTint="@color/colorPrimary"
        android:text="@string/survey_new_answer"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/new_answer"
        android:layout_below="@+id/button"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:inputType="text"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/button2"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:drawableLeft="@drawable/ic_add"
        android:drawableTint="@color/colorPrimary"
        android:text="@string/survey_new_answer"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/text4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/new_answer"
        android:layout_below="@+id/button1"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:inputType="text"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/button3"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:drawableLeft="@drawable/ic_add"
        android:drawableTint="@color/colorPrimary"
        android:text="@string/survey_new_answer"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/text5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/new_answer"
        android:layout_below="@+id/button2"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:inputType="text"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/buttonExamSave"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/button3"
        android:layout_marginTop="20dp"
        android:drawableRight="@drawable/ic_chevron_right"
        android:drawableTint="@color/colorPrimary"
        android:text="@string/button_next"
        android:textAllCaps="true" />


    <Button
        android:id="@+id/buttonBack"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/button3"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_chevron_left"
        android:drawableTint="@color/colorPrimary"
        android:text="@string/back"
        android:textAllCaps="true" />

</RelativeLayout>